# protein_shapes

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  run.py  setup.py
configs/: default.yaml
data/esm3/: cath_mu.npy  cath_sigma.npy
data/prot_domain_classifier/: cath_mu.npy
data/proteinmpnn/: cath_layer_1.pkl  cath_layer_2.pkl  cath_layer_3.pkl
examples/: perturb.py  plot_embeddings.py  plot_perturb.py  plot_perturb_domain_classifier.py  subsample.py
src/protein_shapes/: constants.py  utils.py
src/protein_shapes/esm3/: embed.py  esm3.py
src/protein_shapes/foldseek/: embed.py  eval.py  foldseek.py
src/protein_shapes/prot_domain_classifier/: embed.py  prot_domain_classifier.py
src/protein_shapes/prot_domain_classifier/domain_classifier/: domain_segmentor.py  segmentor_model_v2.py  segmentor_utils.py
src/protein_shapes/proteinmpnn/: clean_pdb.sh  embed.py  generate_pdb_json.py  model_utils.py  proteinmpnn.py  run.py
